2003-10-24  Sascha Brawer  <brawer@dandelis.ch>

	* gnu/testlet/java/awt/geom/CubicCurve2D/clone.java,
	gnu/testlet/java/awt/geom/CubicCurve2D/Double/Double.java,
	gnu/testlet/java/awt/geom/CubicCurve2D/Double/getBounds2D.java,
	gnu/testlet/java/awt/geom/CubicCurve2D/Double/getCtrlP1.java,
	gnu/testlet/java/awt/geom/CubicCurve2D/Double/getCtrlP2.java,
	gnu/testlet/java/awt/geom/CubicCurve2D/Double/getP1.java,
	gnu/testlet/java/awt/geom/CubicCurve2D/Double/getP2.java,
	gnu/testlet/java/awt/geom/CubicCurve2D/Double/setCurve.java,
	gnu/testlet/java/awt/geom/CubicCurve2D/Float/Float.java,
	gnu/testlet/java/awt/geom/CubicCurve2D/Float/getBounds2D.java,
	gnu/testlet/java/awt/geom/CubicCurve2D/Float/getCtrlP1.java,
	gnu/testlet/java/awt/geom/CubicCurve2D/Float/getCtrlP2.java,
	gnu/testlet/java/awt/geom/CubicCurve2D/Float/getP1.java,
	gnu/testlet/java/awt/geom/CubicCurve2D/Float/getP2.java,
	gnu/testlet/java/awt/geom/CubicCurve2D/Float/setCurve.java,
	gnu/testlet/java/awt/geom/CubicCurve2D/getFlatness.java,
	gnu/testlet/java/awt/geom/CubicCurve2D/getFlatnessSq.java,
	gnu/testlet/java/awt/geom/CubicCurve2D/getPathIterator.java,
	gnu/testlet/java/awt/geom/CubicCurve2D/setCurve.java,
	gnu/testlet/java/awt/geom/CubicCurve2D/solveCubic.java,
	gnu/testlet/java/awt/geom/CubicCurve2D/subdivide.java,
	gnu/testlet/java/awt/geom/GeneralPath/append_PathIterator.java,
	gnu/testlet/java/awt/geom/GeneralPath/GeneralPath.java,
	gnu/testlet/java/awt/geom/GeneralPath/getCurrentPoint.java,
	gnu/testlet/java/awt/geom/GeneralPath/getPathIterator.java,
	gnu/testlet/java/awt/geom/QuadCurve2D/clone.java,
	gnu/testlet/java/awt/geom/QuadCurve2D/Double/Double.java,
	gnu/testlet/java/awt/geom/QuadCurve2D/Double/getBounds2D.java,
	gnu/testlet/java/awt/geom/QuadCurve2D/Double/getCtrlPt.java,
	gnu/testlet/java/awt/geom/QuadCurve2D/Double/getP1.java,
	gnu/testlet/java/awt/geom/QuadCurve2D/Double/getP2.java,
	gnu/testlet/java/awt/geom/QuadCurve2D/Double/setCurve.java,