@@ -1,0 +1,22 @@
+// Tags: JDK1.1
+
+package gnu.testlet.java.lang.reflect.sub;
+
+public class OtherPkg
+{
+  static void g()
+  {
+  }
+  
+  void h()
+  {
+  }
+  
+  protected void i()
+  {
+  }
+  
+  static char j = 'j';
+  char k = 'k';
+  protected char l = 'l';
+}
