@@ -1,0 +1,27 @@
+// Tags: JDK1.1
+
+package gnu.testlet.java.lang.reflect.sub;
+
+public class Super
+{
+  void s() 
+  { 
+  }
+
+  protected static void t()
+  {
+  }
+  
+  protected void u()
+  {
+  }
+  
+  private void v()
+  {
+  }
+  
+  protected static char w = 'w';
+  protected char x = 'x';
+  static char y = 'y';
+  private char z = 'z';
+}
